--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -6,6 +6,12 @@
     android:paddingHorizontal="@dimen/margin_10dp"
     android:layout_marginTop="@dimen/margin_10dp"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal">
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        android:layout_weight="1"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
@@ -28,6 +34,13 @@
         android:id="@+id/tvDescription"
         style="@style/TextAppearance.MaterialComponents.Body1"
         tools:text="@string/app_name"/>
-
+</LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/ivMenu"
+        android:padding="@dimen/margin_10dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_menu"/>
 </LinearLayout>
 </layout>
